--- a/packages/StewardClient/src/app/pages/tools/pages/home/components/home-tile-grid/home-tile-grid.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/home/components/home-tile-grid/home-tile-grid.component.html
@@ -46,13 +46,12 @@
           ></div>
         </mat-card-content>
         <mat-card-actions align="end">
-
           <mat-checkbox
             [matTooltip]="item.hasAccess ? 'Check to include in nav' : undefined"
             [disabled]="!isEnabled[item.tool] && !item.hasAccess"
             [ngModel]="isEnabled[item.tool]"
             (ngModelChange)="onCheckboxChecked(item.tool, $event)"
-            class="tours-no-size-wrapper"
+            class="no-size-wrapper"
             [tourAnchor]="isFirst ? 'home-tour.step.five' : ''"
           >
             In Nav
