--- a/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
+++ b/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
@@ -1,4 +1,4 @@
-<span class="tours-no-size-wrapper" tourAnchor="home-tour.step.three">
+<span class="no-size-wrapper" tourAnchor="home-tour.step.three">
   <a
     [routerLink]="[{ outlets: { sidebar: 'changelog' } }]"
     queryParamsHandling="preserve"
@@ -16,7 +16,7 @@
   </a>
 </span>
 <span class="short-spacer"></span>
-<span class="tours-no-size-wrapper" tourAnchor="home-tour.step.nine">
+<span class="no-size-wrapper" tourAnchor="home-tour.step.nine">
   <a
     href="https://confluence.turn10studios.com/x/r4GiE"
     target="_blank"
@@ -26,7 +26,7 @@
     <mat-icon>info</mat-icon>
   </a>
 </span>
-<span class="tours-no-size-wrapper" tourAnchor="home-tour.step.eight">
+<span class="no-size-wrapper" tourAnchor="home-tour.step.eight">
   <a
     [routerLink]="[{ outlets: { sidebar: 'contactus' } }]"
     queryParamsHandling="preserve"
@@ -38,7 +38,7 @@
   </a>
 </span>
 <span class="short-spacer"></span>
-<span class="tours-no-size-wrapper" tourAnchor="home-tour.step.two">
+<span class="no-size-wrapper" tourAnchor="home-tour.step.two">
   <a
     [routerLink]="[{ outlets: { sidebar: 'settings' } }]"
     queryParamsHandling="preserve"
