--- a/packages/StewardClient/src/app/shared/views/credit-history/credit-history.component.html
+++ b/packages/StewardClient/src/app/shared/views/credit-history/credit-history.component.html
@@ -3,28 +3,30 @@
     <mat-card-title>Credit History</mat-card-title>
     <mat-card-subtitle>{{ gameTitle }}</mat-card-subtitle>
     <div class="sf-spacer"></div>
-    <button
-      mat-raised-button
-      color="primary"
-      matTooltip="Lookup Credit Updates"
-      [monitor]="getCreditUpdatesMonitor"
-      stateManager
-      monitorDisable
-      monitorWarnSnackbar
-      (click)="lookupCreditUpdates()"
-    >
-      Search
-      <button-spinner defaultIcon="search" [monitor]="getCreditUpdatesMonitor"></button-spinner>
-    </button>
-    <help-popover-icon cardTitle="Credit History" confluenceName="Credit History Card">
-      <p>Credit history is recovered from logs and is displayed from oldest to newest.</p>
-      <p>
-        Entries that occur at the same moment in time (and so have no known order) are grouped
-        together.
-      </p>
-    </help-popover-icon>
+    <ng-container *ngIf="isRetail">
+      <button
+        mat-raised-button
+        color="primary"
+        matTooltip="Lookup Credit Updates"
+        [monitor]="getCreditUpdatesMonitor"
+        stateManager
+        monitorDisable
+        monitorWarnSnackbar
+        (click)="lookupCreditUpdates()"
+      >
+        Search
+        <button-spinner defaultIcon="search" [monitor]="getCreditUpdatesMonitor"></button-spinner>
+      </button>
+      <help-popover-icon cardTitle="Credit History" confluenceName="Credit History Card">
+        <p>Credit history is recovered from logs and is displayed from oldest to newest.</p>
+        <p>
+          Entries that occur at the same moment in time (and so have no known order) are grouped
+          together.
+        </p>
+      </help-popover-icon>
+    </ng-container>
   </mat-card-header>
-  <mat-card-content>
+  <mat-card-content *ngIf="isRetail; else notAvailableTemplate">
     <credit-update-sort-options [formControl]="formControls.sortOptions">
     </credit-update-sort-options>
 
@@ -202,3 +204,7 @@
     </ng-container>
   </mat-card-content>
 </mat-card>
+
+<ng-template #notAvailableTemplate>
+  Credit History is only available for Retail environment
+</ng-template>
