--- a/packages/StewardClient/src/app/shared/views/ugc-profile/ugc-profile.component.scss
+++ b/packages/StewardClient/src/app/shared/views/ugc-profile/ugc-profile.component.scss
@@ -39,3 +39,10 @@ button:not(.mat-mini-fab) {
 div.actions {
   align-items: end;
 }
+
+div.file-name {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px;
+  text-wrap: nowrap;
+}
