--- a/packages/StewardClient/src/app/pages/tools/pages/auction-blocklist/woodstock/woodstock-auction-blocklist.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/auction-blocklist/woodstock/woodstock-auction-blocklist.component.html
@@ -1,4 +1,4 @@
-<woodstock-auction-blocklist-new-entry
+<!-- <woodstock-auction-blocklist-new-entry
   (newEntries)="newEntries$.next($event)"
-></woodstock-auction-blocklist-new-entry>
-<auction-blocklist-base [service]="service" [newEntries$]="newEntries$"></auction-blocklist-base>
+></woodstock-auction-blocklist-new-entry> -->
+<woodstock-auction-blocklist></woodstock-auction-blocklist>
