--- a/packages/StewardClient/src/app/shared/views/safety-rating/safety-rating.component.html
+++ b/packages/StewardClient/src/app/shared/views/safety-rating/safety-rating.component.html
@@ -60,10 +60,12 @@
             >Only used while player is out of probation.</mat-hint
           >
           <mat-error *ngIf="formControls.safetyRatingScore.hasError('min')"
-            >Safety Rating must be greater than or equal to 1.</mat-error
+            >Safety Rating must be greater than or equal to
+            {{ safetyRating?.configuration.minScore }}.</mat-error
           >
           <mat-error *ngIf="formControls.safetyRatingScore.hasError('max')"
-            >Safety Rating must be less than or equal to 100.</mat-error
+            >Safety Rating must be less than or equal to
+            {{ safetyRating?.configuration.maxScore }}.</mat-error
           >
         </mat-form-field>
         <mat-form-field appearance="fill" class="sf-default-hint">
@@ -77,10 +79,12 @@
             >Only used while player is in probation.</mat-hint
           >
           <mat-error *ngIf="formControls.probationarySafetyRatingScore.hasError('min')"
-            >Probationary Safety Rating must be greater than or equal to 1.</mat-error
+            >Probationary Safety Rating must be greater than or equal to
+            {{ safetyRating?.configuration.minScore }}.</mat-error
           >
           <mat-error *ngIf="formControls.probationarySafetyRatingScore.hasError('max')"
-            >Probationary Safety Rating must be less than or equal to 100.</mat-error
+            >Probationary Safety Rating must be less than or equal to
+            {{ safetyRating?.configuration.maxScore }}.</mat-error
           >
         </mat-form-field>
         <mat-form-field appearance="fill" class="sf-default-hint">
