Add new bounty detail tool

--- a/packages/StewardClient/src/app/pages/tools/pages/bounty/pages/steelhead/steelhead-search-bounty.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/bounty/pages/steelhead/steelhead-search-bounty.component.html
@@ -71,7 +71,11 @@
 
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef>Actions</th>
-          <td mat-cell *matCellDef="let entry"></td>
+          <td mat-cell *matCellDef="let entry">
+            <a mat-stroked-button color="primary" clickStop [routerLink]="entry.bountyDetailsLink">
+              <span>View Details</span>
+            </a>
+          </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
