Drop ngx-humanize-duration dependency

--- a/packages/StewardClient/src/app/shared/modules/model-dump/model-dump-simple/model-dump-duration-table/model-dump-duration-table.component.html
+++ b/packages/StewardClient/src/app/shared/modules/model-dump/model-dump-simple/model-dump-duration-table/model-dump-duration-table.component.html
@@ -3,7 +3,7 @@
     <th>{{ e.name }}</th>
     <td>
       <standard-copy [text]="e.value | durationToIso">{{
-        e.value | durationToMillis | humanizeDuration
+        e.value | durationToIso
       }}</standard-copy>
     </td>
   </tr>
